# pantomime-backend

./: .gitignore  .gitmodules  Cargo.toml  README.md  app.py  config.toml  model.py  model_jobs.py  readme.md  requirements.txt  start.sh  utils.py  webcam_test.py  worker.py
.cargo/: config.toml
src/: constants.rs  index.html  main.rs
templates/: index.html
