[package]
name = "pantomime-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = { version = "0.6.18", features = ["multipart"] }
base64 = "0.21.2"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
socketioxide = "0.3.0"
tch = "0.13.0"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
toml = "0.7.5"
tower = "0.4.13"
tower-http = { version = "0.4.1", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
